# Fintech_Fraude_Detection

./: README.md  api_key.json  pyproject.toml  transactions.db
app/: server.py  test_client.py
app/models/: encoder.joblib  scaler.joblib
app/models/client/: client_anomaly_detection.joblib  client_encoder.joblib  client_scaler.joblib
app/models/distributeur/: distro_anomaly_detection.joblib  distro_encoder.joblib  distro_scaler.joblib
app/utils/: preprocess_data.py
streamlit/: 1_📜_API.py  1_🕵🏾‍♂️_API.py
streamlit/pages/: 2_🤖_Bot.py  3_📜_Documentation.py  4_📜_Documentation.py  4_🔓_Logout.py
