[tool.poetry]
name = "fintech_fraud_detection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
scikit-learn = "1.2.2"
joblib = "1.4.2"
pandas = "^2.2.2"
langchain = "^0.2.0"
langchain-community = "^0.2.0"
langchain-groq = "^0.1.4"
langchain-core = "^0.2.0"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
